готовая верста входа и регистрации

--- a/фронт/login.html
+++ b/фронт/login.html
@@ -14,7 +14,7 @@
             <link rel="preconnect" href="https://fonts.googleapis.com">
             <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
             <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
-            <link rel="stylesheet" href="login-style.css"/>
+            <!-- <link rel="stylesheet" href="login-style.css"/> -->
         </header>
         
     </head>
@@ -23,13 +23,13 @@
         <header class="header">
             <div class="container">
                 <div class="header_inner">
-                    <div class="header_logo">RAW</div>
+                    <div class="header_logo">TRAVEL</div>
 
                     <nav class="nav">
                         
                             <a class="nav_link" href="index.php">Главная</a>
                             <a class="nav_link" href="profile.php">Профиль</a>
-                            <a class="nav_link" href="raw.php">Рацион</a>
+                            <!-- <a class="nav_link" href="raw.php">Рацион</a> -->
                             <a class="nav_link" href="login.html">Вход</a>
 
                             <a class="nav_link favorite" href="#" aria-label="Избранное">тема</a>
