--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                             <a class="nav_link" href="index.php">Главная</a>
                             <a class="nav_link" href="profile.php">Профиль</a>
                             <!-- <a class="nav_link" href="raw.php">Рацион</a> -->
-                            <a class="nav_link" href="login.html">Вход</a>
+                            <a class="nav_link" href="index.html">Вход</a>
 
                             <a class="nav_link favorite" href="#" aria-label="Избранное">тема</a>
                       
